[package]
name = "learning_openssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
futures = "0.3.30"
openssh = { version = "0.10.3", features = ["native-mux"] }
openssh-sftp-client = "0.14.1"
regex = "1.10.3"
shell-escape = "0.1.5"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "fs"] }
